[shenker/image_analysis] WIP bead calibration. Filtering works.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/230801 Calibration.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/230801 Calibration.ipynb
@@ -341,16 +341,44 @@
     "from sklearn.neighbors import KDTree\n",
     "\n",
     "\n",
-    "def segment_puncta(img, low_sigma=1, high_sigma=50, expand=2):\n",
+    "def segment_puncta(\n",
+    "    img, low_sigma=0.5, high_sigma=30, expand=2, filter=True, filter_kwargs=None\n",
+    "):\n",
     "    img_dog = skimage.filters.difference_of_gaussians(img, low_sigma, high_sigma)\n",
     "    img_mask = img_dog > skimage.filters.threshold_otsu(img_dog)\n",
     "    img_labels = skimage.measure.label(img_mask)\n",
     "    if expand is not None:\n",
     "        img_labels = skimage.segmentation.expand_labels(img_labels, expand)\n",
+    "    if filter:\n",
+    "        img_labels = filter_puncta(img, img_labels, **(filter_kwargs or {}))\n",
     "    return img_labels\n",
     "\n",
     "\n",
-    "def measure_puncta(img, img_labels=None, min_dist=10, max_intensity=3):\n",
+    "def nearest_neighbors(df):\n",
+    "    X = np.stack((df[\"centroid_weighted-0\"], df[\"centroid_weighted-1\"]), axis=1)\n",
+    "    kdtree = KDTree(X)\n",
+    "    dists, idxs = kdtree.query(X, k=2)\n",
+    "    # get nearest non-identical neighbor\n",
+    "    dists = dists[:, 1]\n",
+    "    idxs = idxs[:, 1]\n",
+    "    return dists, idxs\n",
+    "\n",
+    "\n",
+    "def filter_puncta(img, img_labels, min_dist=15, max_intensity_factor=1.3):\n",
+    "    df = measure_puncta(img, img_labels)\n",
+    "    # filter out points with nearest neighbors closer than min_dist\n",
+    "    dists, idxs = nearest_neighbors(df)\n",
+    "    max_intensity = df[\"moments_weighted_central-0-0\"].median() * max_intensity_factor\n",
+    "    bad_labels = df[\"label\"][\n",
+    "        (dists < min_dist) | (df[\"moments_weighted_central-0-0\"] > max_intensity)\n",
+    "    ]\n",
+    "    new_img_labels = img_labels.copy()\n",
+    "    img_mask = np.isin(img_labels, bad_labels)\n",
+    "    new_img_labels[img_mask] = 0  # set to background\n",
+    "    return new_img_labels\n",
+    "\n",
+    "\n",
+    "def measure_puncta(img, img_labels=None):\n",
     "    if img_labels is None:\n",
     "        img_labels = segment_points(img)\n",
     "    background = np.median(img[img_labels == 0])\n",
@@ -370,28 +398,183 @@
     "            ),\n",
     "        )\n",
     "    )\n",
+    "    # TODO: check for off-by-one\n",
+    "    center_y = (img.shape[0] + 1) / 2\n",
+    "    center_x = (img.shape[1] + 1) / 2\n",
     "    df[\"radius\"] = np.sqrt(\n",
-    "        df[\"centroid_weighted-0\"] ** 2 + df[\"centroid_weighted-1\"] ** 2\n",
+    "        (df[\"centroid_weighted-0\"] - center_y) ** 2\n",
+    "        + (df[\"centroid_weighted-1\"] - center_x) ** 2\n",
     "    )\n",
-    "    X = np.stack((df[\"centroid_weighted-0\"], df[\"centroid_weighted-1\"]), axis=1)\n",
-    "    kdtree = KDTree(X)\n",
-    "    dists, idxs = kdtree.query(X, k=2)\n",
-    "    # get nearest non-identical neighbor\n",
-    "    dists = dists[:, 1]\n",
-    "    idxs = idxs[:, 1]\n",
-    "    overcrowding_mask = np.full(len(df), True)\n",
-    "    # filter out points with nearest neighbors closer than min_dist\n",
-    "    overcrowding_mask[idxs[dists < min_dist]] = False\n",
-    "    df_filtered = df[\n",
-    "        overcrowding_mask & (df[\"moments_weighted_central-0-0\"] < max_intensity)\n",
-    "    ]\n",
-    "    return df_filtered"
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = nd2.get_frame_2D(v=0, t=0, z=20, c=1)[:500, :500]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_labels = segment_puncta(img, filter=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_labels2 = segment_puncta(img, filter=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = measure_puncta(img, img_labels2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"dist\"] = nearest_neighbors(df)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.hvplot.scatter(\"centroid_weighted-1\", \"centroid_weighted-0\", c=\"dist\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.hvplot.hist(\"moments_weighted_central-0-0\", bins=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"moments_weighted_central-0-0\"].median() * 1.3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df2 = df[df[\"dist\"] > 12]\n",
+    "df2 = df[df[\"moments_weighted_central-0-0\"] < 6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20), dpi=200)\n",
+    "plt.imshow(skimage.color.label2rgb(img_labels, img * 50))\n",
+    "plt.plot(\n",
+    "    df[\"centroid_weighted-1\"],\n",
+    "    df[\"centroid_weighted-0\"],\n",
+    "    marker=\"o\",\n",
+    "    mfc=\"none\",\n",
+    "    c=\"red\",\n",
+    "    markersize=8,\n",
+    "    lw=0,\n",
+    "    markeredgewidth=1,\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(skimage.color.label2rgb(img_labels, img * 50))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(skimage.color.label2rgb(img_labels2, img * 50))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(img, scale=0.999)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20), dpi=200)\n",
+    "plt.imshow(skimage.color.label2rgb(img_labels, img * 50))\n",
+    "plt.plot(\n",
+    "    df[\"centroid_weighted-1\"],\n",
+    "    df[\"centroid_weighted-0\"],\n",
+    "    marker=\"o\",\n",
+    "    mfc=\"none\",\n",
+    "    c=\"red\",\n",
+    "    markersize=4,\n",
+    "    lw=0,\n",
+    "    markeredgewidth=0.5,\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +710,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37",
+   "id": "51",
    "metadata": {},
    "source": [
     "# Focus visualizations"
@@ -535,7 +718,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38",
+   "id": "52",
    "metadata": {},
    "source": [
     "## Spatial"
@@ -544,7 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +771,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43",
+   "id": "57",
    "metadata": {},
    "source": [
     "## Z stack"
@@ -597,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,13 +859,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "64",
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_labels = segment_puncta(nd2.get_frame_2D(v=0, t=0, z=20, c=1))\n",
+    "img_labels = segment_puncta(nd2.get_frame_2D(v=0, t=0, z=20, c=1)[:500, :500])\n",
     "dfs = {\n",
-    "    z: measure_puncta(nd2.get_frame_2D(v=0, t=0, z=z, c=1), img_labels)\n",
+    "    z: measure_puncta(nd2.get_frame_2D(v=0, t=0, z=z, c=1)[:500, :500], img_labels)\n",
     "    for z in trange(nd2.sizes[\"z\"])\n",
     "}"
    ]
@@ -690,7 +873,77 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfs.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(\n",
+    "    skimage.color.label2rgb(\n",
+    "        img_labels, nd2.get_frame_2D(v=0, t=0, z=20, c=1)[:500, :500] * 50\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfs[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(nd2.get_frame_2D(v=0, t=0, z=20, c=1)[:500, :500], scale=0.999)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(dfs[50])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics = {\n",
+    "    column: {\n",
+    "        idx: np.array([dfs[z][column].iloc[idx] for z in range(nd2.sizes[\"z\"])])\n",
+    "        for idx in range(len(dfs[0]))\n",
+    "    }\n",
+    "    for column in (\"moments_weighted_central-0-0\",)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +962,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +976,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53",
+   "id": "73",
    "metadata": {},
    "source": [
     "# Translation"
@@ -732,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +997,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "79",
    "metadata": {},
    "outputs": [],
    "source": [
