--- a/paulssonlab/src/paulssonlab/shenker/cloning/230702 NAO strains ingest.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/230702 NAO strains ingest.ipynb
@@ -38,6 +38,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install -U --no-deps primer3plus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import paulssonlab.api as api\n",
     "import paulssonlab.api.geneious as geneious\n",
     "import paulssonlab.cloning.commands.parser as cmd_parser\n",
@@ -51,20 +61,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3",
+   "id": "4",
    "metadata": {},
    "source": [
     "# Setup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "config = toml.load(\"config.toml\")"
    ]
   },
   {
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gc = pygsheets.authorize(service_account_file=\"credentials.json\")"
+    "config = toml.load(\"config.toml\")"
    ]
   },
   {
@@ -84,12 +84,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "gc = pygsheets.authorize(service_account_file=\"credentials.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "reg = registry.Registry(gc, config[\"registry\"][\"folder\"])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "source": [
     "# Config"
@@ -98,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "10",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
     "tags": []
@@ -123,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "source": [
     "## Double Terminators"
@@ -132,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "source": [
     "## RiboJs"
@@ -232,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21",
+   "id": "22",
    "metadata": {},
    "source": [
     "# NAO strains"
@@ -306,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,9 +408,12 @@
     "            reg, parts_sheet, well_to_plasmid, name_corrections, plasmid\n",
     "        )\n",
     "    elif name.startswith(\"pLIB\"):\n",
-    "        part_name = parts_sheet[parts_sheet[\"Usage\"].str.contains(f\"{name}/\")].iloc[0][\n",
-    "            \"Name\"\n",
-    "        ]\n",
+    "        parts_using_plasmid = parts_sheet[\"Usage\"].str.contains(f\"{name}/\")\n",
+    "        if (num_parts := parts_using_plasmid.sum()) != 1:\n",
+    "            raise ValueError(\n",
+    "                f\"expecting a single part that uses plasmid {name}, found {num_parts}\"\n",
+    "            )\n",
+    "        part_name = parts_sheet[parts_using_plasmid].iloc[0][\"Name\"]\n",
     "        return part_name\n",
     "    # pLIB number: 199\n",
     "    elif name.isdigit():  # isdigit isn't robust, but fine for this\n",
@@ -449,13 +462,45 @@
     "    term = parse_nao_part(row[\"Terminator (pLIB number or 3G part ID) \"])\n",
     "    parts = [f\"UNS{uns_a}_A\", *promoter, *rbs, *cds, *term, f\"UNS{uns_e}_E\"]\n",
     "    command = f\"@GG({', '.join(parts)})\"\n",
-    "    return command"
+    "    return command\n",
+    "\n",
+    "\n",
+    "def nao_strain_to_command(row, tus):\n",
+    "    command = \"@Gib({}, {})\".format(\n",
+    "        \", \".join(\n",
+    "            [\n",
+    "                nao_tu_to_command(tus.loc[f\"tLIB{t}\"])\n",
+    "                for t in re.split(r\",|-\", str(row[\"TUs\"]))\n",
+    "            ]\n",
+    "        ),\n",
+    "        backbone_pcrs[row[\"Plasmids\"]],\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strains.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nao_strain_to_command(strains.loc[716], tus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31",
    "metadata": {
     "tags": []
    },
@@ -493,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "32",
    "metadata": {
     "tags": []
    },
@@ -505,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "33",
    "metadata": {
     "tags": []
    },
@@ -517,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "34",
    "metadata": {
     "tags": []
    },
@@ -529,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "35",
    "metadata": {
     "tags": []
    },
@@ -541,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "37",
    "metadata": {
     "tags": []
    },
@@ -576,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "38",
    "metadata": {
     "tags": []
    },
@@ -588,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "39",
    "metadata": {
     "tags": []
    },
@@ -606,102 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "reg.get(\"DT101\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "38",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "name_map = {}\n",
-    "for name in nao_names.index:\n",
-    "    name = str(name)\n",
-    "    new_name = get_part_name(\n",
-    "        reg, flib_fragments, well_to_plasmid, name_corrections, name\n",
-    "    )\n",
-    "    name_map[name] = new_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tus[\n",
-    "    \"Description of TU function (e.g. expression strength, expressed protein, circuit it is intended for)\"\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "40",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "tus.loc[\"tLIB447\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tu_to_command = {}\n",
-    "for _, row in tus.iterrows():\n",
-    "    tu_to_command[int(row[\"tLIB number\"].replace(\"tLIB\", \"\"))] = command"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "42",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tu_to_command[193]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "strains = strains.loc[:, \"TUs\":]\n",
-    "strains = strains[strains[\"TUs\"].str.len() != 0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "44",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "strains"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,109 +670,6 @@
     "    \"p15A\": \"JUMP_p15a_UNS1_UNS10\",\n",
     "    \"pSC101\": \"JUMP_pSC101_UNS1_UNS10\",\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "47",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "strains[\"command\"] = strains.apply(\n",
-    "    lambda row: \"@Gib({}, {})\".format(\n",
-    "        \", \".join([tu_to_command[int(t)] for t in str(row[\"TUs\"]).split(\",\")]),\n",
-    "        backbone_pcrs[row[\"Plasmids\"]],\n",
-    "    ),\n",
-    "    axis=1,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "48",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "strains[\"command\"].tail().values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "strains.loc[152:158][\"command\"].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# L3S1P13, L3S3P11, L3S2P55, L3S2P11"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def eval_command(cmd, registry, context=None):\n",
-    "    ctx = commands.CommandContext(registry, context)\n",
-    "    return commands.command_parser.parse(\n",
-    "        cmd, semantics=commands.CommandSemantics(commands._commands, ctx)\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res = eval_command(strains.loc[152][\"command\"], reg, context=\"pLIB\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "54",
-   "metadata": {},
-   "source": [
-    "# Barcode GFA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "55",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\" + \".join(\n",
-    "    [\n",
-    "        \"barcode_bit{num}_on | barcode_bit{num}_on\".format(num=num)\n",
-    "        for num in range(1, 31)\n",
-    "    ]\n",
-    ")"
    ]
   }
  ],
@@ -842,7 +689,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
