[shenker/image_analysis,image_analysis/calibration] WIP distortion. Can plot detected points in one FOV translated in another FOV and have them line up.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/231101 Calibration.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/231101 Calibration.ipynb
@@ -488,13 +488,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nd2._parser._raw_metadata.x_data"
+    "xs = np.asarray(nd2._parser._raw_metadata.x_data)\n",
+    "ys = np.asarray(nd2._parser._raw_metadata.y_data)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ys[1] - ys[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xs[1] - xs[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(xs[1] - xs[0]) / 4.25 * 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,29 +536,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
-    "df, img_labels = distortion.find_puncta(img1)"
+    "df, img_labels = distortion.find_puncta(img1, filter=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
     "plt.figure(figsize=(10, 10), dpi=200)\n",
-    "distortion.plot_puncta(img=img1, labels=img_labels, df=df, filter_labels=True)"
+    "distortion.plot_puncta(img=img1, labels=None, df=df, filter_labels=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10, 10), dpi=200)\n",
+    "df_trans = distortion.translate_df(df, (-48, 0))\n",
+    "distortion.plot_puncta(img=img2, df=df_trans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45",
+   "id": "49",
    "metadata": {},
    "source": [
     "# Focus visualizations"
@@ -617,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46",
+   "id": "50",
    "metadata": {},
    "source": [
     "## Spatial"
@@ -626,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +713,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51",
+   "id": "55",
    "metadata": {},
    "source": [
     "## Z stack"
@@ -679,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,7 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63",
+   "id": "67",
    "metadata": {},
    "source": [
     "## Export"
@@ -847,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -859,7 +902,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "72",
    "metadata": {},
    "outputs": [],
    "source": [
