[shenker/image_analysis] WIP distortion. Off-axis correction seems to work when manually adjusting parameters, it remains to implement parameter fitting.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/231103 Calibration.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/231103 Calibration.ipynb
@@ -266,7 +266,7 @@
     "img_corrected2 = image.correct_radial_distortion(\n",
     "    img, k1, input_center=input_center, cval=3_000\n",
     ")\n",
-    "display_image(img_corrected2, downsample=1, scale=0.99)"
+    "display_image(img_corrected2, downsample=4, scale=0.99)"
    ]
   },
   {
@@ -980,7 +980,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_frame_func(filename, position, channel, t, k1=0, dark=None, flat=None):\n",
+    "def get_frame_func(\n",
+    "    filename, position, channel, t, k1=0, center=None, dark=None, flat=None\n",
+    "):\n",
     "    return image.correct_radial_distortion(\n",
     "        np.asarray(\n",
     "            workflow.get_nd2_frame(\n",
@@ -988,6 +990,7 @@
     "            )\n",
     "        ),\n",
     "        k1=k1,\n",
+    "        input_center=center,\n",
     "    )  # [600:2400, 1500:3500]\n",
     "    # return np.asarray(\n",
     "    #     workflow.get_nd2_frame(filename, position, channel, t, dark=dark, flat=flat)\n",
@@ -1011,19 +1014,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "# k1 = 5.199999999997459e-10\n",
-    "# k1 = 7e-10\n",
-    "# k1 = 6.8e-10\n",
-    "k1 = 5e-10\n",
-    "img0 = get_frame_func(filename, 258, segmentation_channel, 0, k1=k1)\n",
-    "image_limits = geometry.get_image_limits(img0.shape)"
+    "img_uncorrected = (\n",
+    "    nd2.get_frame_2D()\n",
+    ")  # get_frame_func(filename, 258, segmentation_channel, 0, k1=0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_uncorrected.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(img0, downsample=1, scale=0.99)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "center = image.center_from_shape(img_uncorrected.shape) - np.array([0, 1000])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "# k1 = 5.199999999997459e-10\n",
+    "# k1 = 7e-10\n",
+    "# k1 = 6.8e-10\n",
+    "k1 = 1e-9\n",
+    "img0 = get_frame_func(filename, 258, segmentation_channel, 0, k1=k1, center=center)\n",
+    "image_limits = geometry.get_image_limits(img0.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1042,7 +1087,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1098,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1120,51 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# k1=1e-9, +1000\n",
+    "diag[\"labeling\"][\"set_finding\"][\"image_with_lines\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# k1=1e-9, -1000\n",
+    "diag[\"labeling\"][\"set_finding\"][\"image_with_lines\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# k1=1e-10\n",
+    "diag[\"labeling\"][\"set_finding\"][\"image_with_lines\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# k1=8e-10\n",
+    "diag[\"labeling\"][\"set_finding\"][\"image_with_lines\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1097,91 +1186,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diag[\"bboxes\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_detection.plot_trenches(bboxes=False, lines=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diag[\"labeling\"][\"find_periodic_lines\"][\"profile\"]  # .keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "93",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diag[\"labeling\"][\"find_periodic_lines\"][\"profile\"]  # .keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diag[\"labeling\"][\"find_periodic_lines\"][\"profile\"]  # .keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diag[\"labeling\"][\"find_periodic_lines\"][\"profile\"]  # .keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diag[\"labeling\"][\"find_periodic_lines\"][\"profile\"]  # .keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(angle, pitch)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "98",
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag[\"labeling\"][\"find_periodic_lines\"][\"peak_func\"][\"spectrum\"]"
+    "diag[\"bboxes\"]"
    ]
   },
   {
@@ -1191,7 +1200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag[\"labeling\"][\"find_periodic_lines\"][\"profile\"]  # .keys()"
+    "trench_detection.plot_trenches(bboxes=False, lines=True)"
    ]
   },
   {
@@ -1201,7 +1210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag[\"labeling\"][\"set_finding\"][\"image_with_lines\"]"
+    "diag[\"labeling\"][\"find_periodic_lines\"][\"profile\"]  # .keys()"
    ]
   },
   {
@@ -1211,13 +1220,93 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag[\"bboxes\"]"
+    "diag[\"labeling\"][\"find_periodic_lines\"][\"profile\"]  # .keys()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "102",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag[\"labeling\"][\"find_periodic_lines\"][\"profile\"]  # .keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "103",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag[\"labeling\"][\"find_periodic_lines\"][\"profile\"]  # .keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "104",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag[\"labeling\"][\"find_periodic_lines\"][\"profile\"]  # .keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "105",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(angle, pitch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "106",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag[\"labeling\"][\"find_periodic_lines\"][\"peak_func\"][\"spectrum\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "107",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag[\"labeling\"][\"find_periodic_lines\"][\"profile\"]  # .keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "108",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag[\"labeling\"][\"set_finding\"][\"image_with_lines\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "109",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag[\"bboxes\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "110",
    "metadata": {},
    "outputs": [],
    "source": [
