[shenker/image_analysis] Formatting fix.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/230710 Drift correction.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/230710 Drift correction.ipynb
@@ -1974,12 +1974,10 @@
     "diag = util.tree()\n",
     "angle = np.deg2rad(-0.5)\n",
     "rhos = np.linspace(*image.hough_bounds(img.shape, angle), 10)\n",
-    "(\n",
-    "    profiles,\n",
-    "    stacked_points,\n",
-    "    anchor_idx,\n",
-    ") = trench_detection.profile.get_trench_line_profiles(\n",
-    "    img, angle, rhos, diagnostics=diag\n",
+    "profiles, stacked_points, anchor_idx = (\n",
+    "    trench_detection.profile.get_trench_line_profiles(\n",
+    "        img, angle, rhos, diagnostics=diag\n",
+    "    )\n",
     ")"
    ]
   },
