--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/240211 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/240211 Trench detection.ipynb
@@ -890,7 +890,8 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "img0 = get_frame_func(filename, 11, segmentation_channel, 0)\n",
+    "img0 = get_frame_func(filename, 50, segmentation_channel, 0)\n",
+    "# img0 = workflow.get_nd2_frame(filename, 50, segmentation_channel, 0)\n",
     "# TODO: replace with calculation that doesn't require processing an image\n",
     "image_limits = geometry.get_image_limits(img0.shape)"
    ]
@@ -904,45 +905,13 @@
    },
    "outputs": [],
    "source": [
-    "np.clip([[4, 4]], [0, 2], [1, 3])"
+    "img1 = img0[:, 300 : img0.shape[1] - 300]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "47",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df[df[\"line\"] == 4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "48",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "diag = util.tree()\n",
-    "x = trench_detection.find_trenches(\n",
-    "    img0,\n",
-    "    width_to_pitch_ratio=width_to_pitch_ratio,\n",
-    "    join_info=False,\n",
-    "    diagnostics=diag,\n",
-    "    # pitch=16.173741362290226\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +932,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "48",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "diag[\"bboxes\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "50",
    "metadata": {
     "tags": []
    },
@@ -985,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -995,17 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diag[\"bboxes\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1015,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1023,8 +994,107 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "rois"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "roi_img = next(geometry.iter_roi_crops(img1, rois[1:]))[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "56",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "roi_img.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "np.nanmean(roi_img, axis=0).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "roi_img.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# def get_center(ary, axis=0):\n",
+    "#     marginalized = np.nanmean(ary, axis=axis)\n",
+    "#     if not marginalized.shape[0]:\n",
+    "\n",
+    "#     np.argmax(marginalized)\n",
+    "\n",
+    "roi_centers = {}\n",
+    "for roi_idx, roi_img in geometry.iter_roi_crops(img0, rois):\n",
+    "    if not roi_img.size:\n",
+    "        continue\n",
+    "    trench_set_idx = rois.loc[roi_idx][\"trench_set\"]\n",
+    "    if trench_set_idx not in roi_centers:\n",
+    "        roi_centers[trench_set_idx] = [[], []]\n",
+    "    roi_centers[trench_set_idx][0].append(np.argmax(np.nanmean(roi_img, axis=1)))\n",
+    "    roi_centers[trench_set_idx][1].append(np.argmax(np.nanmean(roi_img, axis=0)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "for trench_set_idx in roi_centers:\n",
+    "    plt.plot(np.array(roi_centers[trench_set_idx][1]) + trench_set_idx * 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61",
    "metadata": {},
    "source": [
     "## Multicolor"
@@ -1033,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61",
+   "id": "66",
    "metadata": {},
    "source": [
     "## Metrics"
@@ -1082,7 +1152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,7 +1164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,7 +1181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1121,7 +1191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "71",
    "metadata": {
     "tags": []
    },
@@ -1150,7 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "72",
    "metadata": {
     "tags": []
    },
@@ -1162,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "73",
    "metadata": {
     "tags": []
    },
@@ -1174,7 +1244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "74",
    "metadata": {
     "tags": []
    },
@@ -1186,7 +1256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "75",
    "metadata": {
     "tags": []
    },
@@ -1198,7 +1268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "76",
    "metadata": {
     "tags": []
    },
@@ -1210,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "77",
    "metadata": {
     "tags": []
    },
@@ -1224,7 +1294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "78",
    "metadata": {
     "tags": []
    },
@@ -1237,7 +1307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "79",
    "metadata": {
     "tags": []
    },
@@ -1249,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "80",
    "metadata": {
     "tags": []
    },
@@ -1261,7 +1331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1271,7 +1341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77",
+   "id": "82",
    "metadata": {
     "tags": []
    },
@@ -1284,7 +1354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
+   "id": "83",
    "metadata": {
     "tags": []
    },
@@ -1297,7 +1367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79",
+   "id": "84",
    "metadata": {
     "tags": []
    },
@@ -1309,7 +1379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80",
+   "id": "85",
    "metadata": {
     "tags": []
    },
@@ -1323,7 +1393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81",
+   "id": "86",
    "metadata": {
     "tags": []
    },
@@ -1335,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "87",
    "metadata": {
     "tags": []
    },
@@ -1347,7 +1417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "88",
    "metadata": {
     "tags": []
    },
@@ -1360,7 +1430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "89",
    "metadata": {
     "tags": []
    },
@@ -1372,7 +1442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "90",
    "metadata": {
     "tags": []
    },
@@ -1384,7 +1454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "91",
    "metadata": {
     "tags": []
    },
@@ -1396,7 +1466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "92",
    "metadata": {
     "tags": []
    },
@@ -1408,7 +1478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "93",
    "metadata": {
     "tags": []
    },
@@ -1422,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "94",
    "metadata": {
     "tags": []
    },
@@ -1434,7 +1504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90",
+   "id": "95",
    "metadata": {
     "tags": []
    },
@@ -1446,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "96",
    "metadata": {
     "tags": []
    },
@@ -1458,7 +1528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92",
+   "id": "97",
    "metadata": {
     "tags": []
    },
@@ -1472,7 +1542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93",
+   "id": "98",
    "metadata": {
     "tags": []
    },
@@ -1486,7 +1556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94",
+   "id": "99",
    "metadata": {
     "tags": []
    },
@@ -1512,7 +1582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
