[shenker/image_analysis,image_analysis] DelayedStore toy demo works.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/240227 Delayed.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/240227 Delayed.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import dask\n",
-    "import distributed"
+    "from dask.distributed import Client"
    ]
   },
   {
@@ -35,11 +35,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "161c23e9-e2bb-4dcb-9d91-dc12b1044a0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = Client()\n",
+    "client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "da19449b-85aa-4329-a555-6c1e0a1f8787",
    "metadata": {},
    "outputs": [],
    "source": [
-    "runner = delayed.Runner.get(\"eager\")"
+    "runner_config = \"eager\"\n",
+    "# runner_config = client\n",
+    "runner = delayed.Runner.get(runner_config)"
    ]
   },
   {
@@ -89,6 +102,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d102aa36-ddc4-4e36-97f4-559a05bff37c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d.is_ready()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3e67f143-dab7-4b85-9491-adfac9ae50bf",
    "metadata": {},
    "outputs": [],
@@ -116,6 +139,111 @@
    "outputs": [],
    "source": [
     "d.result()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a93f3def-8596-405d-81e4-b761c9980454",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = delayed.DelayedStore()\n",
+    "a = s[\"a\"]\n",
+    "b = s[\"b\"]\n",
+    "c = s[\"c\"]\n",
+    "d = runner.delayed(foo, a, b, c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6419d6b-c0d8-42f2-a3e0-4d32dc2b5612",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.is_ready()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d00fe9a-f9dd-4517-b451-2a076ff559bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c9c0c78-bcd1-4ce3-b55f-6390a6d49808",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.value = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "693e7c41-bbac-406e-a6d2-2b6ca8f5edf9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d.is_ready()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea1acf2c-b3ec-4039-8e55-8f123c221c08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s[\"b\"] = 2\n",
+    "c.value = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8b96662-e664-41fc-aeb8-2385a30d75b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s._store"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4bcd8da-5033-4933-ba0c-ecbbe041e109",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d.is_ready()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fe7753a-974f-4bf6-9aad-312e4ddeb562",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d.result()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af6d3302-416d-4685-b607-09fb7cfe2e06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d.dependencies"
    ]
   }
  ],
