[shenker/image_analysis,image_analysis] Refactor of delayed.
- Renamed Runner -> DelayedQueue.
- DelayedQueue.poll bugfix.
- Removed Runner subclasses that wrapped functions for eager/dask/dask.distributed execution. User is now responsible for wrapping those themselves, which is more flexible, and allows mixing them.
- DelayedCallable can take None args/kwargs.
- DelayedStore.__init__ requires a queue argument, DelayedStore.__setitem__ now adds setter DelayedCallable to queue.
- DelayedStore._store -> DelayedStore.value (because user may want to access it directly, also avoids usage like "store = DelayedStore(); store._store").

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/240228 Delayed.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/240228 Delayed.ipynb
@@ -50,19 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "runner_config = \"eager\"\n",
-    "# runner_config = client\n",
-    "runner = delayed.Runner.get(runner_config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9c9c5d2b-5e33-4ccb-ba74-63324403dc1a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "runner"
+    "queue = delayed.DelayedQueue()"
    ]
   },
   {
@@ -86,7 +74,7 @@
     "a = delayed.DelayedValue()\n",
     "b = delayed.DelayedValue()\n",
     "c = delayed.DelayedValue()\n",
-    "d = runner.delayed(foo, a, b, c)"
+    "d = queue.delayed(foo, a, b, c)"
    ]
   },
   {
@@ -134,6 +122,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "36751819-6fb9-48a8-9ea8-b6f3b6120fdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "queue.poll()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2183717c-e587-430b-9d42-fe2b374a5492",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "38d53717-d68b-4727-8242-99dd9ea51df3",
    "metadata": {},
    "outputs": [],
@@ -148,11 +156,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = delayed.DelayedStore()\n",
+    "s = delayed.DelayedStore(queue)\n",
     "a = s[\"a\"]\n",
     "b = s[\"b\"]\n",
     "c = s[\"c\"]\n",
-    "d = runner.delayed(foo, a, b, c)"
+    "# d = queue.delayed(foo, a, b, c)\n",
+    "d = s.setdefault(\"d\", queue.delayed(foo, a, b, c))"
    ]
   },
   {
@@ -213,7 +222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s._store"
+    "s.value"
    ]
   },
   {
@@ -224,6 +233,16 @@
    "outputs": [],
    "source": [
     "d.is_ready()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55efe5fa-166e-44fd-8b3f-efcd4d78d970",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "queue.poll()"
    ]
   },
   {
